moving and resizing clips

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
    <script type="text/javascript" src="javascripts/touch-tracker.js"></script>
     <script type="text/javascript" src="javascripts/application.js"></script>
   </head>
-  <body onload="new Application()">
-    
+  <body onload="new Application()" style="margin:0">
+
   </body>
 </html>
