changed to jquery

--- a/index.html
+++ b/index.html
@@ -1,14 +1,23 @@
 <html>
   <head>
-    <script type="text/javascript" src="javascripts/mootools.js"></script>
-    <script type="text/javascript" src="javascripts/widget.js"></script>
+    <script type="text/javascript" src="javascripts/jquery.js"></script>
+    <script type="text/javascript" src="javascripts/base.js"></script>
     <script type="text/javascript" src="javascripts/clip.js"></script>
-    <script type="text/javascript" src="javascripts/track.js"></script>
-    <script type="text/javascript" src="javascripts/arrangement.js"></script>
-   <script type="text/javascript" src="javascripts/touch-tracker.js"></script>
     <script type="text/javascript" src="javascripts/application.js"></script>
+    <link rel="stylesheet" href="style.css" type="text/css" media="screen" />
   </head>
-  <body onload="new Application()" style="margin:0">
-
+  <body onload="Application.initialize()">
+    <div id="application">
+      <div id="toolbar">
+      </div>
+      <div id="arrangement">
+        <div id="track-1" class="track">
+        </div>
+        <div id="track-2" class="track">
+        </div>
+        <div id="track-3" class="track">
+        </div>
+      </div>
+    </div>
   </body>
 </html>
