added jquery-ui, use bpm and pixelsPerBeat instead of pixelsPerSecond

--- a/app/index.html
+++ b/app/index.html
@@ -1,11 +1,14 @@
 <html>
   <head>
     <script type="text/javascript" src="javascripts/jquery.js"></script>
+    <script type="text/javascript" src="javascripts/jquery-ui.js"></script>
+    <script type="text/javascript" src="javascripts/init-ui.js"></script>
     <script type="text/javascript" src="javascripts/underscore.js"></script>
     <script type="text/javascript" src="javascripts/track.js"></script>
     <script type="text/javascript" src="javascripts/clip.js"></script>
     <script type="text/javascript" src="javascripts/application.js"></script>
-    <link rel="stylesheet" href="style.css" type="text/css" media="screen" />
+    <link rel="stylesheet" href="css/style.css" type="text/css" media="screen" />
+    <link rel="stylesheet" href="css/ui-lightness/jquery-ui.css" type="text/css" media="screen" />
   </head>
   <body onload="Application.initialize()">
     <div id="application">
@@ -14,6 +17,9 @@
           <li><a href="/amen_brother.wav">amen_brother.wav</a></li>
           <li><a href="/apache.wav">apache.wav</a></li>
           <li><a href="/big_beat.wav">big_beat.wav</a></li>
+        </ul>
+        <ul>
+          <li><div class="slider"> </div></li>
         </ul>
       </div>
       <div id="toolbar">
